--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 secret_key="not the real secret key"
-SUPABASE_KEY="not the realy supabase key"
+SUPABASE_API_KEY="not the realy supabase key"
 SUPABASE_URL="my-url-to-my-awesome-supabase-instance"
