--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    with:
-      SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
-      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      SUPABASE_ID: ${{ secrets.SUPABASE_ID }}
     steps:
       - uses: actions/checkout@v2
 
@@ -27,7 +23,13 @@ jobs:
       - run: isort --diff .
       - run: black --check .
       - run: flake8
-      - run: pytest test
+
+      - name: Run tests
+        with:
+          SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_ID: ${{ secrets.SUPABASE_ID }}
+        run: pytest test
 
   docker-image:
     if:
