--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - run: flake8
 
       - name: Run tests
-        with:
+        env:
           SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_ID: ${{ secrets.SUPABASE_ID }}
@@ -49,9 +49,6 @@ jobs:
       - name: Build docker image
         run: docker build . -t image:test
 
-      # - name: Smoke test docker image
-      #   run: |
-      #     docker run --rm middlepollen:test
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
