--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,9 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_ID: ${{ secrets.SUPABASE_ID }}
         run: |
-          docker run -v /var/run/docker.sock:/var/run/docker.sock -e SUPABASE_API_KEY=$SUPABASE_API_KEY -e SUPABASE_URL=$SUPABASE_URL -e SUPABASE_ID=$SUPABASE_ID --network host image:test pytest test
+          mkdir -p /tmp/ipfs/output
+          mkdir -p /tmp/ipfs/input
+          docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/tmp/ipfs,target=/tmp/ipfs -e SUPABASE_API_KEY=$SUPABASE_API_KEY -e SUPABASE_URL=$SUPABASE_URL -e SUPABASE_ID=$SUPABASE_ID --network host image:test pytest test
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
