Supabase backend without SQS (#24)
* if outputs_to_db.py fails, try again

* linting

* fix bug: loaded_model is updated

* filter out null values when reading cid

* piping cids to outputs_to_db.py instead of going via unnecessary /tmp/cid file that breaks everything

* killing child processes of BackgroundCommand

* don't sleep to make sure ipfs sync is finished, instead run with --once  in the end

* added script to check for db inconsistencies

* Run pytest in ci

* pass on secrets to ci

* fix: pass on secrets

* try to fix ci yaml

* fix outputs_to_db.py: variable db_name

* linting

* add unsaved changes of ci

* more logs when exiting RunningCogModel

* fix bug from previous commit

* dont overwrite logs with response text in case of cog error

* Add pipe to #pollinator-logs

* Add ID

* allow longer processing time (15min)

* Update pipe_to_pollinator_logs_discord.sh

* Update pipe_to_pollinator_logs_discord.sh

* adjust dockerfile

* try to fix the docker entrypoint iissue

* use different entrypoint syntax

* now fixed the entrypoint

* added checks to avoid forgetting debug statements

* reset RunningCogModel to previous state

* debug linting

* print container  logs

* more aggressive log printing

* remove linter checks for debug statements as it doesnt work in the ci for an unknown reason

* made it harder to accidently run tests against the prod db and delete evrything

* set correct ipfs root

* black

* try to fix ci tests

* i hope this works now

* add unsaved changes that should be part of the previous commit

* fail faster if cog model cannot start

* wait until container is ready fixed

* show more detailed traceback if http response cannot be written to file

* fixed issue that occured sometimes when switching containers

* more logs

* deactivate debug cogmodel avatatclip

Co-authored-by: Ubuntu <ubuntu@ip-172-31-4-151.ec2.internal>
Co-authored-by: Th

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     tags: "*"
 
 jobs:
-  test:
+  linting:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,7 +23,6 @@ jobs:
       - run: isort --diff .
       - run: black --check .
       - run: flake8
-      # - run: pytest --cov --cov-fail-under=80
 
   docker-image:
     if:
@@ -39,13 +38,28 @@ jobs:
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
+      
+      - name: Install cog
+        run: |
+          curl -o /usr/local/bin/cog -L https://github.com/replicate/cog/releases/latest/download/cog_`uname -s`_`uname -m`
+          chmod +x /usr/local/bin/cog
+      
+      - name: Build cog test image
+        run: cd test-cog-image && cog build -t no-gpu-test-image
 
       - name: Build docker image
         run: docker build . -t image:test
+      
+      - name: Run tests
+        env:
+          SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_ID: ${{ secrets.SUPABASE_ID }}
+        run: |
+          mkdir -p /tmp/ipfs/output
+          mkdir -p /tmp/ipfs/input
+          docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/tmp/ipfs,target=/tmp/ipfs -e SUPABASE_API_KEY=$SUPABASE_API_KEY -e SUPABASE_URL=$SUPABASE_URL -e SUPABASE_ID=$SUPABASE_ID --network host image:test pytest -o log_cli=true test
 
-      # - name: Smoke test docker image
-      #   run: |
-      #     docker run --rm middlepollen:test
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
