--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,8 @@
 name: Test
 
 on: 
-  pull_request: {}
   push:
-    branches: "*"
+    branches: "**"
     tags: "*"
 
 jobs:
@@ -25,11 +24,6 @@ jobs:
       - run: flake8
 
   docker-image:
-    if:
-      contains('
-        refs/heads/dev
-        refs/heads/main
-      ', github.ref)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -74,11 +68,18 @@ jobs:
       - name: Create repository if it doesn't exist yet
         run: aws ecr describe-repositories --repository-names ${{ github.repository }} || aws ecr create-repository --repository-name ${{ github.repository }}
 
+      - name: Setimage tag
+        run: |
+          if [[ $BRANCH == 'main' && $GITHUB_EVENT_NAME == 'push' ]]; then
+              echo "IMAGE_TAG=main" >> "$GITHUB_ENV"
+          else
+              echo "IMAGE_TAG=dev" >> "$GITHUB_ENV"
+          fi
+
       - name: Tag and push image to Amazon ECR
         env:
           ECR_REGISTRY: 614871946825.dkr.ecr.us-east-1.amazonaws.com #${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ github.repository }}
-          IMAGE_TAG: ${{ steps.extract_branch.outputs.branch }}
         run: |
           echo Tagging image as $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker tag image:test $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
