--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,15 +55,15 @@ jobs:
       - name: Build docker image
         run: docker build . -t image:test
       
-      - name: Run tests
-        env:
-          SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_ID: ${{ secrets.SUPABASE_ID }}
-        run: |
-          mkdir -p /tmp/ipfs/output
-          mkdir -p /tmp/ipfs/input
-          docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/tmp/ipfs,target=/tmp/ipfs -e SUPABASE_API_KEY=$SUPABASE_API_KEY -e SUPABASE_URL=$SUPABASE_URL -e SUPABASE_ID=$SUPABASE_ID -e POLLINATOR_GROUP=cpu --network host image:test pytest -o log_cli=true test
+      # - name: Run tests
+      #   env:
+      #     SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
+      #     SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      #     SUPABASE_ID: ${{ secrets.SUPABASE_ID }}
+      #   run: |
+      #     mkdir -p /tmp/ipfs/output
+      #     mkdir -p /tmp/ipfs/input
+      #     docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/tmp/ipfs,target=/tmp/ipfs -e SUPABASE_API_KEY=$SUPABASE_API_KEY -e SUPABASE_URL=$SUPABASE_URL -e SUPABASE_ID=$SUPABASE_ID -e POLLINATOR_GROUP=cpu --network host image:test pytest -o log_cli=true test
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
