--- a/test-cog-image-that-fails/cog.yaml
+++ b/test-cog-image-that-fails/cog.yaml
@@ -14,7 +14,8 @@ build:
   python_version: "3.8"
 
   # a list of packages in the format <package-name>==<version>
-  # python_packages:
+  python_packages:
+    - "tqdm==4.64.1"
     # - "numpy==1.19.4"
     # - "torch==1.8.0"
     # - "torchvision==0.9.0"
